--- a/templates/classes/views/SXiHumidifier.html
+++ b/templates/classes/views/SXiHumidifier.html
@@ -13,7 +13,8 @@
     <div class="container device-icon %.status|"off;on"%" style='background-image:url(../templates/xiaomimiio/img/small/zhimi.humidifier.ca1.png);background-size: 55px 55px;width:60px;height:60px;margin-right:5px'>
         <i class="fas fa-cog %.status|";fa-spin"% bottomright"></i>
     </div>
-    <div class="device-header" style="padding-top:0px;height:30px;"><span>%.object_description%</span></div>
-    <div class="device-details">Temp: %.temperature%&deg;C Hum: %.humidity%% Mode:%.mode%</div> 
-    <div class="device-details">Water: <progress max="125" value="%.depth%"></progress></div>
+    <div class="device-header" style="padding-top:0px;height:22px;"><span>%.object_description%</span></div>
+    <div class="device-details"><#LANG_DEVICES_HUMIDIFIER_WATER_LEVEL#>: <progress max="125" value="%.depth%"></progress></div>
+    <div class="device-details"><#LANG_DEVICES_CURRENT_TEMPERATURE#>:<b>%.temperature%&deg;C</b> <#LANG_DEVICES_CURRENT_HUMIDITY#>:<b>%.humidity%%</b></div>
+    <div class="device-details"><#LANG_DEVICES_HUMIDIFIER_MODE#>:%.mode% (%.speed% rpm)</div> 
 </div>
